--- a/text-utils/Makefile
+++ b/text-utils/Makefile
@@ -28,8 +28,8 @@ endif
 # Where to put datebase files?
 
 MOREHELP=	more.help
-MOREHELPFILE=$(MOREHELPDIR)/$(MOREHELP)
-# MOREHELPDIR set in ../MCONFIG
+MOREHELPFILE=$(MOREHELP_DIR)/$(MOREHELP)
+# MOREHELP_DIR and MOREHELPDIR set in ../MCONFIG
 CFLAGS:=$(CFLAGS) -DMOREHELPFILE=\"$(MOREHELPFILE)\"
 
 all: $(BIN) $(USRBIN)
