Imported from util-linux-2.11q tarball.

--- a/misc-utils/Makefile
+++ b/misc-utils/Makefile
@@ -97,7 +97,9 @@ endif
 
 install: all
 	$(INSTALLDIR) $(BINDIR) $(USRBINDIR)
+ifneq "$(BIN)" ""
 	$(INSTALLBIN) $(BIN) $(BINDIR)
+endif
 	$(INSTALLBIN) $(USRBIN) $(USRBINDIR)
 	$(INSTALLDIR) $(MAN1DIR)
 	$(INSTALLMAN) $(MAN1) $(MAN1DIR)
