--- a/hwclock/Makefile
+++ b/hwclock/Makefile
@@ -16,9 +16,9 @@ SBIN= 		hwclock
 all: $(SBIN)
 
 
-hwclock.o: hwclock.c shhopt.h
+hwclock.o: hwclock.c
 hwclock.o cmos.o rtc.o kd.o: clock.h
-hwclock: hwclock.o shhopt.o cmos.o rtc.o kd.o
+hwclock: hwclock.o cmos.o rtc.o kd.o
 
 CWFLAGS := $(subst -Wmissing-prototypes,,$(CFLAGS))
 
