--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,7 +1,7 @@
 include ../make_include
 include ../MCONFIG
 
-all: err.o my_reboot.o setproctitle.o env.o carefulputc.o xstrncpy.o
+all: err.o my_reboot.o setproctitle.o env.o carefulputc.o xstrncpy.o md5.o
 
 err.o: err.c
 
@@ -14,6 +14,8 @@ setproctitle.o: setproctitle.h
 carefulputc.o: carefulputc.h
 
 xstrncpy.o: xstrncpy.h
+
+md5.o: md5.c md5.h
 
 .PHONY: clean
 clean:
