--- a/mount/Makefile
+++ b/mount/Makefile
@@ -43,12 +43,12 @@ install: $(PROGS)
 	$(COMPILE) $<
 
 mount: mount.o fstab.o sundries.o realpath.o mntent.o version.o \
-       mount_guess_fstype.o mount_by_label.o getusername.o \
+       mount_guess_fstype.o get_label_uuid.o mount_by_label.o getusername.o \
        $(LIB)/setproctitle.o $(LIB)/env.o $(NFS_OBJS) $(LO_OBJS)
 	$(LINK) $^ -o $@
 
 umount: umount.o fstab.o sundries.o realpath.o mntent.o getusername.o \
-	version.o $(LIB)/env.o $(LO_OBJS)
+	get_label_uuid.o version.o $(LIB)/env.o $(LO_OBJS)
 	$(LINK) $^ -o $@
 
 swapon:	swapon.o version.o
